# gabrr-budget-ai-server

./: .env.example  .example.env  .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: descriptive-identifiers.mdc  python-vertical-readability.mdc
alembic/: env.py
alembic/versions/: 574f0c9b4e44_initial.py  8b6a2f4c9d10_import_jobs_for_pdf_worker.py  91990f5019e0_legacy_local_revision_placeholder.py  c2c1a7f5b9e8_drop_import_job_progress.py
app/: __init__.py  config.py  main.py  mock_data.py  schemas.py
app/agents/: __init__.py  factory.py  gateway.py  models.py
app/agents/common/: __init__.py  runtime.py  schemas.py
app/agents/parsing/: __init__.py  agent.py
app/agents/pipelines/: __init__.py  parsing_pipeline.py
app/agents/providers/: __init__.py
app/agents/runtimes/: __init__.py  parsing_runtime.py
app/agents/schemas/: __init__.py  transactions.py
app/agents/tools/: __init__.py
app/api/: agents_routes.py  categories_routes.py  import_jobs_routes.py  routes.py  transactions_routes.py
app/core/: config.py
app/core/llm/: __init__.py  interface.py  openrouter.py
app/db/: base.py  session.py
app/db/models/: __init__.py  accounts.py  activity_events.py  agent_runs.py  base.py  budgets.py  categories.py  draft_transactions.py  import_events.py  (+6 more)
app/schemas/: __init__.py  transaction.py
app/services/: agent_service.py  file_storage_service.py
app/utils/: __init__.py  files.py
app/workers/: import_worker.py
docs/Features/: 01_pdf_import_job_feature.md
postman/: Gabrr-Budget-API.postman_collection.json
scripts/: curl_smoke_transactions.sh  seed_demo_data.py
scripts/agent_service/: sse_digest_adk_stream.py  test_agent_service.sh
tests/: test_api_routes.py  test_google_adk_gateway.py  test_import_job_events.py  test_transactions_integration.py
tests/agents/: AGENTIC_TESTING.md  MANUAL_AGENT_SMOKE.md  TEST_AGENT_SERVICE.md  agent_service_run_log.md
tests/utils/: test_files.py
(+30 files in other folders)
