[project]
name = "gabrr-budget-api"
version = "0.1.0"
description = "Parse financial documents (CSV/PDF) into normalized transactions using AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "docling>=2.67.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "litellm>=1.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = ["ruff>=0.9.9"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "alembic"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
# E301–E306: PEP 8 blank-line structure (vertical spacing between definitions).
# W29*: trailing / end-of-file whitespace on blank lines.
select = [
    "E301",
    "E302",
    "E303",
    "E304",
    "E305",
    "E306",
    "F",
    "I",
    "UP",
    "W291",
    "W292",
    "W293",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
